Updated actions workflow

--- a/.github/workflows/azure-app-service.yml
+++ b/.github/workflows/azure-app-service.yml
@@ -38,6 +38,7 @@ jobs:
           path: |
             client/dist
             client/server.js
+            client/server
             client/package.json
             client/package-lock.json
 
